--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "simple-image-editorjs": "^1.4.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
