:bug: fix: document editor and workspace modification :truck:

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ CLERK_SECRET_KEY= sk_test_vd7jVjR2PZgAQV4L3xsrekK8cOhJgSufpAEqgx9n9S
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 NEXT_PUBLIC_FIREBASE_API_KEY= AIzaSyChPZUMQ3-ElVNkB51QhgnHzwtIMuykhsA
 
