--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "docx": "^9.0.2",
     "editorjs-alert": "^1.1.4",
     "editorjs-button": "^3.0.3",
     "emoji-picker-react": "^4.12.0",
