--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@editorjs/paragraph": "^2.11.6",
     "@editorjs/table": "^2.4.1",
     "@editorjs/text-variant-tune": "^1.0.3",
+    "@google/generative-ai": "^0.21.0",
     "@liveblocks/client": "^2.9.0",
     "@liveblocks/node": "^2.8.2",
     "@liveblocks/react": "^2.9.0",
@@ -40,11 +41,13 @@
     "emoji-picker-react": "^4.12.0",
     "firebase": "^10.13.0",
     "framer-motion": "^11.11.8",
+    "konva": "^9.3.15",
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-konva": "^18.2.10",
     "simple-image-editorjs": "^1.4.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
